laborations/lab1/test/bad/bad027.cc
int main () {
	&45
	return 0;
}
